# newsfloor-agent

./: .dockerignore  .gitignore  Dockerfile  README.md  config.py  deploy.ps1  main.py  pyproject.toml  requirements.txt  response.json  spec.md
agentic_learning.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
cft/: stack.yaml
newsfloor/: __init__.py  config_loader.py  handler.py
newsfloor/config_data/: profile.json  sources.json  topics.json
newsfloor/contracts/: __init__.py  nodes.py  primitives.py  state.py
newsfloor/data/: db.py  load_context.py
newsfloor/graph/: __init__.py  graph.py  nodes.py  state.py
newsfloor/graph/node_definitions/: crew_utils.py  delivery.py  fetch.py  input_supervisor.py  output_supervisor.py  publish.py  scoring.py  synthesis.py  topic.py
newsfloor/graph/node_definitions/publish/: __init__.py  content_blocks.py  html_extraction.py  manifest.py  page_renderers.py
newsfloor/graph/node_definitions/synthesis/: __init__.py  crew.py  html.py  parsers.py  retry.py
newsfloor/graph/node_definitions/trend/: __init__.py  db_writer.py  signal_analysis.py  strength.py  weekly_synthesis.py
newsfloor/templates/: article.html  articles_index.html
tests/: conftest.py
tests/integration/: test_graph_flow.py  test_node_contracts.py
tests/schema_and_assertion/: test_schema_contracts.py  test_scoring_pipeline.py
tests/tier3/: test_schema_contracts.py  test_scoring_pipeline.py
tests/tier4/: conftest.py  test_scoring_quality.py  test_synthesis_quality.py  test_topic_quality.py
tests/unit/: test_db.py  test_delivery.py  test_fetch_sanitization.py  test_handler.py  test_improvements.py  test_publish.py  test_routing.py  test_state.py  test_strength.py  test_synthesis_json.py  test_synthesis_sanitization.py
